--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Anton Zinoviev <zinoviev@debian.org>, Joey Hess <joeyh@debian.org>
 Build-Depends: debhelper (>= 7.0.8), dh-di, po-debconf (>= 0.5.0)
-Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-btrfs
+Vcs-Browser: http://git.debian.org/?p=d-i/partman-btrfs.git
+Vcs-Git: git://git.debian.org/d-i/partman-btrfs.git
 
 Package: partman-btrfs
 XC-Package-Type: udeb
