--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Anton Zinoviev <zinoviev@debian.org>, Christian Perrier <bubulle@debian.org>, Dimitri John Ledkov <xnox@debian.org>
 Build-Depends: debhelper (>= 9), dh-di, po-debconf (>= 0.5.0)
-Vcs-Browser: https://anonscm.debian.org/cgit/d-i/partman-btrfs.git
-Vcs-Git: https://anonscm.debian.org/git/d-i/partman-btrfs.git
+Vcs-Browser: https://salsa.debian.org/installer-team/partman-btrfs
+Vcs-Git: https://salsa.debian.org/installer-team/partman-btrfs.git
 
 Package: partman-btrfs
 Package-Type: udeb
